Hoja de Estilos fue agregada, ya puedo identificar cada checkbox como uno diferente pero no puedo activar uno sin que se activen todos al mismo tiempo

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fcheckbox_5554926&psig=AOvVaw3LOuxT6CrHX-drxmhP1VzD&ust=1719790249444000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCODFoYz8gYcDFQAAAAAdAAAAABAE" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
